// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object fields additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_foo"
                id="TextFieldLabel11"
              >
                foo
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel11"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__12"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_a"
                id="TextFieldLabel2"
              >
                A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel2"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_b"
                id="TextFieldLabel5"
              >
                B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel5"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__6"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
